--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,20 @@
 
-@import "/tutorial/css/font.css";
+@import "/css/font.css";
 
 
-@import "/tutorial/css/comon.css";
+@import "/css/comon.css";
 
-@import "/tutorial/css/header.css";
+@import "/css/header.css";
 
-@import "/tutorial/css/main-menu.css";
+@import "/css/main-menu.css";
 
-@import "/tutorial/css/colors.css";
+@import "/css/colors.css";
 
-@import "/tutorial/css/aside.css";
+@import "/css/aside.css";
 
-@import "/tutorial/css/content.css";
+@import "/css/content.css";
 
-@import "/tutorial/css/footer.css";
+@import "/css/footer.css";
 
 
 
