creo que si quedo

--- a/css/font.css
+++ b/css/font.css
@@ -1,13 +1,13 @@
 @font-face{
     font-family: "Steepidien";
-    src: url(/tutorial/font/Steepidien.ttf);
+    src: url(/font/Steepidien.ttf);
 
 
 }
 
 @font-face{
     font-family: "Fragmentcore";
-    src: url(/tutorial/font/Fragmentcore.otf);
+    src: url(/font/Fragmentcore.otf);
 
 
 }
