--- a/partials/aside.html
+++ b/partials/aside.html
@@ -16,10 +16,10 @@
         <h3>Últimas Entradas</h3>  
 
         <ul>
-            <li><a href="/NB_news/Telematica.html">¿Qué es la Telématica?</a></li>
-            <li><a href="/NB_news/videogames.html">¿Como se relaciona la telemática con los videojuegos?</a></li>
-            <li><a href="/NB_news/ventajas.html">Ventajas de estudiar Telématica</a></li>
-            <li><a href="/NB_news/historia.html">Historia de la Telemática</a></li>
+            <li><a href="/Telematica.html">¿Qué es la Telématica?</a></li>
+            <li><a href="/videogames.html">¿Como se relaciona la telemática con los videojuegos?</a></li>
+            <li><a href="/ventajas.html">Ventajas de estudiar Telématica</a></li>
+            <li><a href="/historia.html">Historia de la Telemática</a></li>
             <li><a href="https://es.wikipedia.org/wiki/Telem%C3%A1tica" target="_blank">Wikipedia</a></li>
         </ul>
 
