--- a/partials/content.html
+++ b/partials/content.html
@@ -9,7 +9,7 @@
         La telemática cubre un campo científico y tecnológico muy grande, englobando el estudio....
     </p>
     
-    <a href="/NB_news/Telematica.html">Leer mas>></a>
+    <a href="/Telematica.html">Leer mas>></a>
 </article>
 
 <article>
@@ -18,20 +18,20 @@
         La telemática y los videojuegos están relacionados en varios aspectos, principalmente en la comunicación y la interacción entre jugadores a través de redes y sistemas informáticos.
          La telemática es una disciplina que combina las telecomunicaciones y la informática, y se encarga....
     </p>
-    <a href="/NB_news/videogames.html">Leer mas>></a>
+    <a href="/videogames.html">Leer mas>></a>
 </article>
 
 <article>
     <h2>Ventajas de estudiar Telemática</h2>
     <p>¡Estudiar Telemática es una excelente opción! Esta carrera combina los campos de las telecomunicaciones y la informática, 
         lo que permite a los estudiantes adquirir conocimientos y habilidades para analizar...</p>
-    <a href="/NB_news/ventajas.html">Leer mas>></a>
+    <a href="/ventajas.html">Leer mas>></a>
 </article>
 
 <article>
     <h2>Historia de la Telemática</h2>
     <p>El primer sistema telemático que se empleó de forma masiva fue el videotex, desarrollado hacia 1970. Consiste en un....</p>
-    <a href="/NB_news/historia.html">Leer mas>></a>
+    <a href="/historia.html">Leer mas>></a>
 </article>
 
 <article>
