--- a/partials/ht.html
+++ b/partials/ht.html
@@ -79,8 +79,8 @@
 
 
     <div class="ht">
-        <img src="/NB_news/img/videotex.jpg" alt="">
-        <img src="/NB_news/img/minitel.jpg" alt="">
+        <img src="/img/videotex.jpg" alt="">
+        <img src="/img/minitel.jpg" alt="">
     </div>
 
 
