--- a/partials/ventajas1.html
+++ b/partials/ventajas1.html
@@ -19,12 +19,12 @@
    
 
     <div class="images">
-        <img src="/NB_news/img/12yearold_programming.jpg" alt="">
-        <img src="/NB_news/img/Young_girl_working_on_a_network.jpg" alt="">
-        <img src="/NB_news/img/Teenager_building_a_robot_1.jpg" alt="">
-        <img src="/NB_news/img/Spirit_Creatures_A_gray_and_blue_cute_robot_working_on_a_netwo_1.jpg" alt="">
-        <img src="/NB_news/img/Spirit_Creatures_A_gray_and_blue_robot_working_on_a_network_0.jpg" alt="">
-        <img src="/NB_news/img/6.jpg" alt="">
+        <img src="/img/12yearold_programming.jpg" alt="">
+        <img src="/img/Young_girl_working_on_a_network.jpg" alt="">
+        <img src="/img/Teenager_building_a_robot_1.jpg" alt="">
+        <img src="/img/Spirit_Creatures_A_gray_and_blue_cute_robot_working_on_a_netwo_1.jpg" alt="">
+        <img src="/img/Spirit_Creatures_A_gray_and_blue_robot_working_on_a_network_0.jpg" alt="">
+        <img src="/img/6.jpg" alt="">
    </div>
 
 
