--- a/partials/vg.html
+++ b/partials/vg.html
@@ -26,17 +26,17 @@
         <p>
             Además, la telemática también se aplica en el desarrollo de videojuegos, 
             como en el caso de la Ingeniería Técnica en Telemática, donde se trabaja en el modelado y desarrollo de videojuegos educativos 
-            utilizando herramientas como Google Sketchup
+            utilizando herramientas como Google Sketchup 
 
         </p>
 
         <div class="images">
-            <img src="/NB_news/img/capsule_616x353.jpg" alt="">
-            <img src="/NB_news/img/It_Takes_Two_cover_art.png" alt="">
-            <img src="/NB_news/img/roblox.jpg" alt="">
-            <img src="/NB_news/img/ff.jpeg" alt="">
-            <img src="/NB_news/img/poster.jpg" alt="">
-            <img src="/NB_news/img/6.jpg" alt="">
+            <img src="/img/capsule_616x353.jpg" alt="">
+            <img src="/img/It_Takes_Two_cover_art.png" alt="">
+            <img src="/img/roblox.jpg" alt="">
+            <img src="/img/ff.jpeg" alt="">
+            <img src="/img/poster.jpg" alt="">
+            <img src="/img/6.jpg" alt="">
        </div>
     
 
