--- a/css/content.css
+++ b/css/content.css
@@ -64,4 +64,182 @@
     }
 }
 
- 
+#content2{
+    float: left;
+    width: calc(100% - 300px);
+    margin-top: 40px;
+    padding: 0 20px;
+    box-sizing: border-box;
+    
+    
+}
+
+#content2 h1{
+    margin: 0;
+    font-size: 30px;
+    color: var(--secondary-color);
+    text-transform: uppercase;
+    text-shadow: 2px 2px 5px var(--gray-color);
+    margin-bottom: 20px;
+
+
+}
+
+
+#content2 article{
+    background-color: white;
+    padding: 40px;
+    margin-bottom: 30px;
+    border: solid 1px var(--gray-color);
+    box-shadow: 2px 2px 5px var(--gray-color);
+
+    
+}
+
+#content2 article h2{
+    margin: 0;
+    color: var(--secondary-color);
+}
+
+#content2 article p{
+    font-size: 20px;
+}
+
+
+.images{
+    display: flex;
+    width: 700px;
+    height: 430px;
+    margin: auto;
+    
+}
+
+.images img{
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .5s ease;
+}
+
+.images img:hover{
+    cursor: crosshair;
+    width: 80%;
+    opacity: 1;
+    filter: contrast(120%);
+}
+
+
+
+
+
+
+
+
+#content3{
+    float: left;
+    width: calc(100% - 300px);
+    margin-top: 40px;
+    padding: 0 20px;
+    box-sizing: border-box;
+    
+    
+}
+
+#content3 h1{
+    margin: 0;
+    font-size: 30px;
+    color: var(--secondary-color);
+    text-transform: uppercase;
+    text-shadow: 2px 2px 5px var(--gray-color);
+    margin-bottom: 20px;
+
+
+}
+
+
+#content3 article{
+    background-color: white;
+    padding: 40px;
+    margin-bottom: 30px;
+    border: solid 1px var(--gray-color);
+    box-shadow: 2px 2px 5px var(--gray-color);
+
+    
+}
+
+#content3 article h2{
+    margin: 0;
+    color: var(--secondary-color);
+}
+
+#content3 article ol{
+    font-size: 20px;
+}
+
+
+#content3 article ol li{
+    padding: 15px;
+}
+
+
+#content4{
+    float: left;
+    width: calc(100% - 300px);
+    margin-top: 40px;
+    padding: 0 20px;
+    box-sizing: border-box;
+    
+    
+}
+
+#content4 h1{
+    margin: 0;
+    font-size: 30px;
+    color: var(--secondary-color);
+    text-transform: uppercase;
+    text-shadow: 2px 2px 5px var(--gray-color);
+    margin-bottom: 20px;
+
+
+}
+
+
+#content4 article{
+    background-color: white;
+    padding: 40px;
+    margin-bottom: 30px;
+    border: solid 1px var(--gray-color);
+    box-shadow: 2px 2px 5px var(--gray-color);
+
+    
+}
+
+#content4 article h2{
+    margin: 0;
+    color: var(--secondary-color);
+}
+
+.ht{
+    display: flex;
+    
+    margin: auto;
+    justify-content: center;
+    transition: .3s ;
+    
+    
+}
+
+
+.ht img{
+    padding: 20px;
+    width: 50%;
+    transition: .3s ;
+}
+
+.ht img:hover{
+    border-radius: 50%;
+    transition: .3s ;
+    box-shadow: 2px 2px 5px var(--gray-color);
+}
+
