--- a/partials/main-menu.html
+++ b/partials/main-menu.html
@@ -1,6 +1,6 @@
 <nav id="main-menu">
     <ul>
-        <li><a href="/NB_news/index.html">Inicio</a></li>
+        <li><a href="/index.html">Inicio</a></li>
         <li>
             <a href="">Noticias</a>
 
